# ZommaLabsKnowledgeGraph

./: .env.example  .gitignore  Alphabet_QA.json  Biege_OA.json  CLAUDE.md  CONTRIBUTING.md  CRAZY_UPDATE_PLAN.md  EVAL_ISSUES.md  LICENSE  NODE_REFACTOR_UPDATE.md  OPENAI_EMBEDDINGS_PLAN.md  PIPELINE_OPTIMIZATION_PLAN.md  QA_ANALYSIS.md  QUERYING_SYSTEM_DESIGN.md  README.md  TASKLIST.md  TEMPORAL_SCORING_IDEA.md  check_boston_strict_output.txt  debug_extraction_20251225_181755.txt  debug_extraction_20251225_194601.txt  debug_output.txt  diagnosis_20251226_015734.json  eval_beige_qa_20260109_164629.json  eval_beige_qa_20260109_164711.json  eval_deep_kg_20260108_212147.json  eval_deep_kg_20260108_213118.json  eval_deep_kg_20260108_215849.json  eval_deep_kg_20260109_141200.json  eval_deep_kg_20260109_154018.json  eval_deep_kg_20260109_155857.json  eval_results_20251224_192550.json  eval_results_20251224_193847.json  eval_results_20251224_195030.json  eval_results_20251224_195354.json  eval_results_20251224_200609.json  eval_results_20251225_175029.json  eval_results_20251225_175751.json  eval_results_20251225_180125.json  eval_results_20251225_195759.json  eval_results_20251225_213414.json  (+17 more)
.github/: pull_request_template.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
data/: Alphabet Inc. - Wikipedia.md
deprecated/: README.md  agent_tools.py  query_agent.py  query_workflow.py
docs/: ALPHABET_QA_RESULTS.md  COT_QUERY_PIPELINE_PLAN.md  EVAL_COMPARISON.md  GRAPH_ARCHITECTURE_V2.md  GRAPH_ARCH_V2_IMPLEMENTATION.md  LOCKING_SYSTEM.md  MODEL_UPGRADE_PLAN.md  PIPELINE_FIXES_NOTES.md  PIPELINE_IMPROVEMENTS.md  PIPELINE_PROBLEMS.md  PROBLEM_3_ATTRIBUTION.md  TASKLIST.md  TEMPORAL_CHANGES.md  TOPIC_ONTOLOGY_CHANGES.md  V6_PRECISION_IMPROVEMENTS.md  atomizer_workflow_refactor.md  financial_graphrag_workflow.md  hierarchy_topic.md  v5.md
eval/: BEIGEBENCH_ACCURACY_ANALYSIS.md  Biege_OA.json  alphabet_v6_results.json  compare_graphrag_v7_20260125_120822.json  deep_rag_embeddings.pkl  deep_research_test_results.json  eval_batch_20260127_235449.json  eval_corrected_20260107_191542.json  eval_corrected_20260107_200446.json  eval_deep_20260106_140239.json  eval_deep_20260106_145832.json  eval_deep_20260106_150410.json  eval_deep_20260106_154508.json  eval_deep_20260107_185231.json  eval_deep_kg_20260107_175534.json  eval_deep_kg_20260107_182327.json  eval_deep_kg_20260107_205709.json  eval_deep_kg_20260108_214503.json  eval_deep_kg_20260108_215417.json  eval_deep_kg_20260109_152042.json  eval_deep_kg_20260109_152834.json  eval_deep_kg_20260109_154305.json  eval_deep_kg_20260109_155311.json  eval_deep_kg_20260109_155531.json  eval_deep_rag_20260107_144128.json  eval_deep_rag_20260107_145146.json  eval_deep_rag_20260107_152852.json  eval_deep_rag_20260107_212318.json  eval_deep_rag_20260122_112221.json  eval_deep_rag_20260122_130231.json  eval_deep_rag_20260122_134904.json  eval_deep_rag_20260124_123854.json  eval_deep_rag_20260125_001039.json  eval_deep_retry_20260107_122555.json  eval_deep_retry_20260107_130300.json  (+67 more)
src/: pipeline.py
(+999 files in other folders)
