[project]
name = "zommalabskg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.63.0",
    "docling-core>=2.52.0",
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-voyageai>=0.3.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "rapidfuzz>=3.14.3",
    "rdflib>=7.5.0",
    "typing-extensions>=4.15.0",
]
