[project]
name = "zommalabskg"
version = "0.1.0"
description = "Knowledge graph ingestion pipeline for financial documents using LLMs and Neo4j"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Zomma Labs"}
]
keywords = [
    "knowledge-graph",
    "neo4j",
    "nlp",
    "financial-documents",
    "rag",
    "llm",
    "information-extraction"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Database Engines/Servers",
]

[project.urls]
Homepage = "https://github.com/Zomma-Labs/ZommaLabsKnowledgeGraph"
Repository = "https://github.com/Zomma-Labs/ZommaLabsKnowledgeGraph"
Issues = "https://github.com/Zomma-Labs/ZommaLabsKnowledgeGraph/issues"
dependencies = [
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-voyageai>=0.3.0",
    "langchain-google-genai>=1.0.0",
    "langchain-xai>=0.2.0",
    "langgraph>=0.0.10",
    "neo4j>=6.0.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "rapidfuzz>=3.14.3",
    "rdflib>=7.5.0",
    "typing-extensions>=4.15.0",
    "fastmcp>=2.14.1",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph-cli[inmem]>=0.2.0",
    "langchain-community>=0.4.1",
    "langchain-anthropic>=1.3.0",
    "google-generativeai>=0.8.6",
    "faiss-cpu>=1.13.2",
    "gliner>=0.2.24",
    "datasets>=4.5.0",
    "scikit-learn>=1.8.0",
    "evaluate>=0.4.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
